--- a/src/Components/PopularServices/PopularServices.scss
+++ b/src/Components/PopularServices/PopularServices.scss
@@ -1,19 +1,72 @@
-.carousel-initialized {
-  position: static;
+.p-container {
+  padding-bottom: 0;
+  padding-top: 0;
+  width: 100%;
+  box-sizing: border-box;
+
+  @media screen and (min-width: 600px) {
+    margin: 0;
+    padding: 32px 32px 64px;
+  }
+
+  @media screen and (min-width: 1160px) {
+    margin: 0 auto;
+    max-width: 1400px;
+  }
+
+  @media screen and (min-width: 1760px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .p-loop {
+    margin: 0 auto 24px;
+
+    @media screen and (min-width: 600px) {
+      margin-bottom: 80px;
+    }
+
+    @media screen and (min-width: 900px) {
+      margin-bottom: 96px;
+    }
+
+    h1 {
+      font-size: 28px;
+      line-height: 130%;
+
+      @media screen and (min-width: 600px) {
+        font-size: 32px;
+        line-height: 120%;
+      }
+
+      @media screen and (min-width: 900px) {
+        padding-bottom: 24px;
+      }
+    }
+
+
+    .carousel-initialized {
+      position: static;
+    }
+    
+    .carousel-prev,
+    .carousel-next {
+      width: 50px;
+      height: 50px;
+      background-color: rgb(243, 243, 243);
+      border-radius: 50%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+    }
+    
+    .carousel-prev {
+      left: -25px;
+    }
+  }
+
+
 }
 
-.carousel-prev,
-.carousel-next {
-  width: 50px;
-  height: 50px;
-  background-color: rgb(243, 243, 243);
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-}
 
-.carousel-prev {
-  left: -25px;
-}
